--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,13 +1,8 @@
 <div>
-    <nav class='navbar navbar-default'>
-        <div class='container-fluid'>
-            <a class='navbar-brand'>{{title}}</a>
-            <ul class='nav navbar-nav'>
-                <li><a [routerLink]="['Welcome']">Home</a></li>
-            </ul>
-        </div>
+    <nav>
+        <div>{{title}}</div>
+        <div><a routerLink="/welcome">Home</a></div>
+        <div><a routerLink="/instructors">Instructor List</a></div>
     </nav>
-    <div class='container'>
-        <router-outlet></router-outlet>
-    </div>
+    <router-outlet></router-outlet>
 </div>
