--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,13 +1,17 @@
 <!-- Main Title page -->
 <div>
-    {{title}}
+    <h1>{{title}}</h1>
 </div>
 
 <!-- Navigator -->
 <div>
     <nav>
         <div><a routerLink="/welcome">Home</a></div>
-        <div><a routerLink="/instructors">Instructor List</a></div>
+        <!--<div><a routerLink="/attendence">Attendence</a></div>
+        <div><a routerLink="/students">Students</a></div>-->
+        <div><a routerLink="/instructors">Instructors</a></div>
+        <!--<div><a routerLink="/lesson">Learning Plans</a></div>
+        <div><a routerLink="/accounts">Accounts</a></div>-->
     </nav>
 </div>
 
