Testing different api calling

--- a/app/instructor-list.component.html
+++ b/app/instructor-list.component.html
@@ -46,4 +46,4 @@
 <div *ngIf="selectedInstructor">
     <h2>{{selectedInstructor.firstName | uppercase}} {{selectedInstructor.lastName | uppercase}} is my instructor</h2>
     <button (click)="gotoDetail()">View Details</button>
-</div>-->
+</div>
