Setting up studentView

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -7,11 +7,11 @@
 <div>
     <nav>
         <div><a routerLink="/welcome">Home</a></div>
-        <!--<div><a routerLink="/attendence">Attendence</a></div>
-        <div><a routerLink="/students">Students</a></div>-->
+        <!--<div><a routerLink="/attendence">Attendence</a></div>-->
+        <div><a routerLink="/students">Students</a></div>
         <div><a routerLink="/instructors">Instructors</a></div>
-        <!--<div><a routerLink="/lesson">Learning Plans</a></div>
-        <div><a routerLink="/accounts">Accounts</a></div>-->
+        <!--<div><a routerLink="/lesson">Learning Plans</a></div>-->
+        <!--<div><a routerLink="/accounts">Accounts</a></div>-->
     </nav>
 </div>
 
