--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -6,62 +6,30 @@
 		</div>
 	</div>
 
-	<div class="uk-grid" data-uk-grid-match="{target:'.uk-panel'}">
-		<!--First Half-->
-		<div class="uk-width-1-2">
-
-			<div class="uk-grid">
-				<div class="uk-width-1-2">
-
-					<!--Updates Panel-->
-					<div class="uk-panel uk-panel-box">
-						<div class="uk-grid">
-							<div class="uk-width-1-6">
-								<i class=" uk-icon-sticky-note uk-icon-large uk-text-primary"></i>
-							</div>
-							<div class="uk-width-5-6">
-								<h2>Update</h2>
-								<p>Bob Ross's account is overdue for payment</p>
-								<p>New transfer student missing Guardian account</p>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="uk-width-1-2">
-
-					<!--Links Panel-->
-					<div class="uk-panel uk-panel-box">
-						<div class="uk-grid">
-							<div class="uk-width-1-6">
-								<i class="uk-icon-exclamation uk-icon-large uk-text-primary"></i>
-							</div>
-							<div class="uk-width-5-6">
-								<h2>Links</h2>
-								<p><a href="">Forums</a></p>
-								<p><a href="">News</a></p>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
+	<div class="uk-grid uk-grid-match" data-uk-grid-match="{target:'.uk-panel'}">
+		<!--Updates Panel-->
+		<div class="uk-width-1-4">
+			<div class="uk-panel uk-panel-box">
+				<h2 class="uk-icon-sticky-note uk-icon-large uk-text-primary"> Links</h2>
+				<p>Bob Ross's account is overdue for payment</p>
+				<p>New transfer student missing Guardian account</p>
 			</div>
 		</div>
 
-		<!--Second Half-->
-		<div class="uk-width-1-2">
-
-			<!--Calendar Panel-->
+		<!--Links Panel-->
+		<div class="uk-width-1-4">
 			<div class="uk-panel uk-panel-box">
-				<div class="uk-grid">
-					<div class="uk-width-1-1">
-						<h2 class="uk-icon-calendar uk-icon-large uk-text-primary"> Calendar</h2>
-					</div>
-				</div>
+				<h2 class="uk-icon-exclamation uk-icon-large uk-text-primary"> Links</h2>
+				<p><a href="">Forums</a></p>
+				<p><a href="">News</a></p>
 			</div>
+		</div>
 
+		<!--Calendar Panel-->
+		<div class="uk-width-2-4">
+			<div class="uk-panel uk-panel-box">
+				<h2 class="uk-icon-calendar uk-icon-large uk-text-primary"> Calendar</h2>
+			</div>
 		</div>
 	</div>
 
