--- a/app/instructors/instructors.component.html
+++ b/app/instructors/instructors.component.html
@@ -8,7 +8,7 @@
 
 	<div class="uk-grid" data-uk-grid-match="{target:'.uk-panel'}">
 		
-		<table class="uk-table uk-table-hover">
+		<table class="uk-table uk-table-hover uk-table-striped">
 			<thead>
 				<tr>
 					<th>ID</th>
