--- a/app/instructors/instructors.component.html
+++ b/app/instructors/instructors.component.html
@@ -1,1 +1,41 @@
 <div class="instructors"> Hello InstructorsComponent! </div>
+<div>
+	<table>
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<!--<th>Middle Name</th>-->
+				<!--<th>Address</th>-->
+				<th>Email</th>
+				<th>Phone Number</th>
+				<th>Mobile Phone Number</th>
+				<!--<th>Emergency Contact Name:</th>-->
+				<!--<th>Emergency Contact Phone:</th>-->
+				<!--<th>Role</th>-->
+				<!--<th>Status</th>-->
+				<!--<th>Employment Start Date:</th>-->
+				<!--<th>Employment Termination Date:</th>-->
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let instructor of instructors">
+				<td>{{instructor.instructorId}}</td>
+				<td>{{instructor.firstName}}</td>
+				<td>{{instructor.lastName}}</td>
+				<!--<td>{{instructor.middleName}}</td>-->
+				<!--<td>{{instructor.address}}</td>-->
+				<td>{{instructor.email}}</td>
+				<td>{{instructor.phoneNumber}}</td>
+				<td>{{instructor.mobilePhoneNumber}}</td>
+				<!--<td>{{instructor.emergencyContactName}}</td>-->
+				<!--<td>{{instructor.emergencyContactPhone}}</td>-->
+				<!--<td>{{instructor.role}}</td>-->
+				<!--<td>{{instructor.status}}</td>-->
+				<!--<td>{{instructor.employmentStartDate}}</td>-->
+				<!--<td>{{instructor.employmentTerminationDate}}</td>-->
+			</tr>
+		</tbody>
+	</table>
+</div>
