--- a/app/students/students.component.html
+++ b/app/students/students.component.html
@@ -1,2 +1,5 @@
 <div class="students"> Hello StudentsComponent! </div>
-<!-- add table and buttons and etc-->
+<!--add table and buttons and etc-->
+<!-- *ngFor="let item of list" is useful for loop to replicate data-->
+<!--item = students-->
+<!--list = students-->
