--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,7 +10,7 @@
 			<li><a routerLink="/home">Home</a></li>
 			<li><a routerLink="/attendence">Attendence</a></li>
 			<li><a routerLink="/students">Students</a></li>
-			<li><a routerLink="/instructors">Instructors</a></li>
+			<li><a routerLink="/instructor">Instructors</a></li>
 			<li><a routerLink="/lessons">Learning Plans</a></li>
 			<li><a routerLink="/accounts">Accounts</a></li>
 		</ul>
