--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,19 +3,7 @@
 	<h1>A Plus Curator</h1>
 </div>
 
-<!--Tabs-->
-<div>
-	<nav>
-		<ul class="uk-tab">
-			<li><a routerLink="/home">Home</a></li>
-			<li><a routerLink="/attendence">Attendence</a></li>
-			<li><a routerLink="/students">Students</a></li>
-			<li><a routerLink="/instructor">Instructors</a></li>
-			<li><a routerLink="/lessons">Learning Plans</a></li>
-			<li><a routerLink="/accounts">Accounts</a></li>
-		</ul>
-	</nav>
-</div>
+<p-tabMenu [model]="items"></p-tabMenu>
 
 <!-- Routing View -->
 <div>
