--- a/app/instructor/css/instructor-detail.component.css
+++ b/app/instructor/css/instructor-detail.component.css
@@ -1,12 +1,13 @@
 label {
   display: inline-block;
-  width: 3em;
+  width: 7em;
   margin: .5em 0;
   color: #607D8B;
   font-weight: bold;
 }
 input {
   height: 2em;
+  width: 20em;
   font-size: 1em;
   padding-left: .4em;
 }
@@ -19,6 +20,16 @@ button {
   border-radius: 4px;
   cursor: pointer; cursor: hand;
 }
+
+.inline {
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+}
+
 button:hover {
   background-color: #cfd8dc;
 }
