--- a/app/students/students.component.html
+++ b/app/students/students.component.html
@@ -7,23 +7,69 @@
 				<th>ID</th>
 				<th>First Nme</th>
 				<th>Last Name</th>
-				<th>Email</th>
-				<th>Phone Number</th>
-				<th>Mobile Phone Number</th>
+				<th>Date of Birth</th>
+				<th>Gender</th>
+				<th>Current Grade</th>
+				<th>Status</th>
+				<th>Gaurdian Account</th>
+				<th>Last date attented</th>
+				<th>Learning Plan</th>
+				<th>Enrollment Plan</th>
+				<th>Description info</th>
+				<th>System info</th>
+				<th>Attachments</th>
+				
 			</tr>
 		</thead>
+		
 		<tbody>
 			<tr *ngFor="let student of students">
-				<td>{{student.studentID}}</td>
+				<td>{{student.studentId}}</td>
 				<td>{{student.firstName}}</td>
 				<td>{{student.lastName}}</td>
-				<td>{{student.email}}</td>
-				<td>{{student.address}}</td>
-
+				<td>{{student.d_o_b}}</td>
+				<td>{{student.gender}}</td>
+				<td>{{student.current_Grade}}</td>
+				<td>{{student.status}}</td>
+				<td>{{student.gaurdianAccount}}</td>
+				<td>{{student.l_d_a}}</td>
+				<td>{{student.learning_plan}}</td>
+				<td>{{student.enrollmentPlan}}</td>
+				<td>{{student.descriptionInfo}}</td>
+				<td>{{student.systemInfo}}</td>
+				<td>{{student.attachments}}</td>
 
 			</tr>
+			<br>
+			<br>
+			
+			<form>
+				First name:<br>
+				<input type="text" name="firstname"><br>
+				Last name:<br>
+				<input type="text" name="lastname"><br>
+				Date of Birth<br>				
+				<input type="date" name = "date_of_birth"><br>
+				Gender <br>
+				<input type="radio" name="gender" value="male" checked> Male<br>
+				<input type="radio" name="gender" value="female"> Female<br>
+				<input type="radio" name="gender" value="other"> Other<br>				
+				Gaurdian:<br>
+				<input type="text" name="Gaurdian"><br>
+				Learning Plan:<br>
+				<input type="text" name="LearningPlan"><br>
+				Enrollment Plan:<br>
+				<input type="text" name="EnrollmentPlan"><br>
+				Description Info:<br>
+				<input type="text" name="DescriptionInfo"><br>
+				System Info:<br>
+				<input type="text" name="SystemInfo"><br>
+				Attachments:<br>
+				<input type="file" name="attachedFile"><br>
+ 			</form>
 			<button> Add Student </button>
-		</tbody>
+		</tbody> 
+		
 	</table>
 </div>
 
