Instructor, gaurdian and student forms.

--- a/app/instructors/instructors.component.html
+++ b/app/instructors/instructors.component.html
@@ -36,6 +36,42 @@
 				<!--<td>{{instructor.employmentStartDate}}</td>-->
 				<!--<td>{{instructor.employmentTerminationDate}}</td>-->
 			</tr>
+            <br />
+            Gaurdian Form
+
+            <form>
+                First name:<br>
+                <input type="text" name="Ifirstname"><br>
+                Last name:<br>
+                <input type="text" name="Ilastname"><br>
+                Address:<br>
+                <input type="text" name="Iaddress" /><br>
+                Email
+                <input type="email" name="Iemail"><br>
+                Phone Number<br>
+                <input type="number" name="Iphonenumber"><br>
+                Cell Number <br>
+                <input type="number" name="Icellnumber"><br>
+                Role(0 - Instructor, 1 - Lead Instructor, 2 - Center Manager, 3 - Center Director)<br>
+                <input type="number" name="Irole"> <br>
+                Emergency Contact Name:<br>
+                <input type="text" name="Iemergencycontactname"><br>
+                Emergency Contact Number:<br>
+                <input type="number" name="Iemergencycontactnumber"><br>
+                Date of Employment:<br>
+                <input type="date" name="Idateofemployment"><br>
+                Date of Termination:<br>
+                <input type="date" name="Idateoftermination"><br>
+                Date of Background Check:<br>
+                <input type="date" name="Idateofbackgroundcheck"><br>                
+                Description Info:<br>
+                <input type="text" name="DescriptionInfo"><br>
+                System Info:<br>
+                <input type="text" name="SystemInfo"><br>
+                Attachments:<br>
+                <input type="file" name="attachedFile"><br>
+            </form>
+            <br>
+            <button> Add Instructor </button>
 		</tbody>
 	</table>
-</div>
