--- a/app/students/students.component.html
+++ b/app/students/students.component.html
@@ -42,7 +42,11 @@
 			</tr>
 			<br>
 			<br>
-			
+            
+            Student Form
+            
+            <br />
+
 			<form>
 				First name:<br>
 				<input type="text" name="firstname"><br>
@@ -67,7 +71,50 @@
 				Attachments:<br>
 				<input type="file" name="attachedFile"><br>
  			</form>
+            
 			<button> Add Student </button>
+
+            <br />
+            <br />
+            Gaurdian Form
+           
+            <form>
+				First name:<br>
+				<input type="text" name="Gfirstname"><br>
+				Last name:<br>
+				<input type="text" name="Glastname"><br>
+                Address:<br>
+                <input type="text" name="Gaddress" /><br>
+                Email
+                <input type="email" name="Gemail"><br>
+                 Phone Number<br>
+                <input type="number" name="Gphonenumber"><br>
+                 Cell Number <br>
+                <input type="number" name="Gcellnumber"><br>
+                Role(0 - Mother, 1 - Father, 2 - Guardian, 3 - Other)<br>
+                <input type="number" name="Grole" > <br>
+                Emergency Contact Name:<br>
+                <input type="text" name="Gemergencycontactname"><br>
+                Emergency Contact Number:<br>
+                <input type="number" name="Gemergencycontactnumber"><br>
+                 List of Students:<br>
+                <input type="text" name="Glistofstudents"><br>
+                 Status:<br>               
+                 <input type="radio" name="Grole" value="Active" checked> Active<br>
+                 <input type="radio" name="Grole" value="Hold"> Hold<br>
+                 <input type="radio" name="Grole" value="Inactive"> Inactive<br>
+                 Description Info:<br>
+                <input type="text" name="DescriptionInfo"><br>
+                 System Info:<br>
+                <input type="text" name="SystemInfo"><br>
+                 Attachments:<br>
+                <input type="file" name="attachedFile"><br>
+             </form>
+            <br>
+            <button> Add Gaurdian </button>
+
+
+
 		</tbody> 
 		
 	</table>
