--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,42 +1,29 @@
-<div>
+<div class="ui-g">
 
-	<div class="ui-g">
+	<div class="ui-g-5">
+		<!--Updates Panel-->
 		<div class="ui-g-12">
-			<h1>Mathnasium of Lala-Land</h1>
-		</div>
-	</div>
-
-	<div class="ui-g">
-
-		<div class="ui-g-4">
-
-			<div class="ui-g">
-				<!--Updates Panel-->
-				<div class="ui-g-6" style="height: 100%">
-					<p-fieldset legend="Updates">
-						<p>Bob Ross's account is overdue for payment</p>
-						<p>New transfer student missing Guardian account</p>
-					</p-fieldset>
-				</div>
-
-				<!--Links Panel-->
-				<div class="ui-g-6" style="height: 100%">
-					<p-fieldset legend="Links">
-						<p><a href="">Forums</a></p>
-						<p><a href="">News</a></p>
-					</p-fieldset>
-				</div>
-			</div>
-
-		</div>
-
-		<div class="ui-g-8">
-			<!--Calendar Panel-->
-			<p-fieldset legend="Calendar">
-				<!--<p-schedule [events]="events"></p-schedule>-->
+			<p-fieldset legend="Updates">
+				<p>Bob Ross's account is overdue for payment</p>
+				<p>New transfer student missing Guardian account</p>
 			</p-fieldset>
 		</div>
 
+		<!--Links Panel-->
+		<div class="ui-g-12">
+			<p-fieldset legend="Links">
+				<p><a href="">Forums</a></p>
+				<p><a href="">News</a></p>
+			</p-fieldset>
+		</div>
+	</div>
+
+	<div class="ui-g-7">
+		<!--Calendar Panel-->
+		<p-fieldset legend="Calendar">
+			<iframe src="https://calendar.google.com/calendar/embed?src=en.usa%23holiday%40group.v.calendar.google.com&ctz=America/Chicago"
+				style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		</p-fieldset>
 	</div>
 
 </div>
