--- a/app/student/html/student-list.component.html
+++ b/app/student/html/student-list.component.html
@@ -4,31 +4,92 @@
 		<button (click)="add(studentName.value); studentName.value=''">Add</button>
 	</div>-->
 
-	<!--Testing NGPrime-->
-	<div class="ui-widget-header ui-helper-clearfix" style="padding:4px 10px;border-bottom: 0 none">
-		<i class="fa fa-search" style="float:left;margin:4px 4px 0 0"></i>
-		<input #gb type="text" pInputText size="50" style="float:left" placeholder="Global Filter">
-	</div>
-	<p-dataTable [value]="students" [rows]="20" [paginator]="true" [pageLinks]="10" [rowsPerPageOptions]="[10,20,50]" [globalFilter]="gb"
-		selectionMode="single" [(selection)]="selectedStudent">
-		<header>List of Students</header>
-		<p-column field="firstName" header="First Name"></p-column>
-		<!--<p-column field="middleName" header="Middle Name"></p-column>-->
-		<p-column field="lastName" header="Last Name"></p-column>
-		<!--<p-column field="address" header="Address"></p-column>-->
-		<!--<p-column field="email" header="Email"></p-column>-->
-		<!--<p-column field="phoneNumber" header="Phone"></p-column>-->
-		<!--<p-column field="mobilePhoneNumber" header="Mobile"></p-column>-->
-		<!--<p-column field="emergencyContactName" header="EC Name"></p-column>-->
-		<!--<p-column field="emergencyContactPhone" header="EC Phone"></p-column>-->
-		<p-column field="currentGrade" header="Grade"></p-column>
-		<p-column field="status" header="Status"></p-column>
-	</p-dataTable>
+	<p-fieldset legend="Students">
 
-	<div *ngIf="selectedStudent">
-		<h2> {{selectedStudent.firstName | uppercase}} {{selectedStudent.lastName | uppercase}} is my student </h2>
-		<button pButton type label="View Details" (click)="gotoDetail()"></button>
-		<button pButton type label="Delete" (click)="delete(selectedStudent); $event.stopPropagation()"></button>
-	</div>
+		<!--Testing NGPrime-->
+		<div class="ui-widget-header ui-helper-clearfix" style="padding:4px 10px;border-bottom: 0 none">
+			<i class="fa fa-search" style="float:left;margin:4px 4px 0 0"></i>
+			<input #gb type="text" pInputText size="50" style="float:left" placeholder="Global Filter">
+		</div>
+		<p-dataTable [value]="students" [rows]="20" [paginator]="true" [pageLinks]="10" [rowsPerPageOptions]="[10,20,50]" [globalFilter]="gb"
+			selectionMode="single" [(selection)]="selectedStudent" resizableColumns="true" reorderableColumns="true" (onRowSelect)="onRowSelect($event)">
+			<header>List of Students</header>
+			<p-column field="firstName" header="First Name" [filter]="true" filterMatchMode="contains"></p-column>
+			<!--<p-column field="middleName" header="Middle Name"></p-column>-->
+			<p-column field="lastName" header="Last Name" [filter]="true" filterMatchMode="contains"></p-column>
+			<!--<p-column field="address" header="Address"></p-column>-->
+			<!--<p-column field="email" header="Email"></p-column>-->
+			<!--<p-column field="phoneNumber" header="Phone"></p-column>-->
+			<!--<p-column field="mobilePhoneNumber" header="Mobile"></p-column>-->
+			<!--<p-column field="emergencyContactName" header="EC Name"></p-column>-->
+			<!--<p-column field="emergencyContactPhone" header="EC Phone"></p-column>-->
+			<p-column field="currentGrade" header="Grade" [filter]="true" filterMatchMode="contains"></p-column>
+			<p-column field="status" header="Status" [filter]="true" filterMatchMode="contains"></p-column>
+			<footer>
+				<div class="ui-helper-clearfix" style="width:100%"><button type="button" pButton style="float:left" (click)="showDialogToAdd()" label="Add"></button></div>
+			</footer>
+
+		</p-dataTable>
+
+		<p-dialog header="Student Details" [(visible)]="displayDialog" showEffect="fade" [modal]="true">
+			<div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="student">
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="vin">ID</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="id" [(ngModel)]="student.studentId" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">First Name</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="first name" [(ngModel)]="student.firstName" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Middle Name</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="first name" [(ngModel)]="student.middleName" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Last Name</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="last name" [(ngModel)]="student.lastName" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Address</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="address" [(ngModel)]="student.address" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Email</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="email" [(ngModel)]="student.email" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Phone</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="phone number" [(ngModel)]="student.phoneNumber" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Mobile</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="mobile" [(ngModel)]="student.mobilePhoneNumber" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Emergency Contact Name</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="last name" [(ngModel)]="student.emergencyContactName" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="brand">Emergency Contact Phone</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="last name" [(ngModel)]="student.emergencyContactPhone" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="color">Grade</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="grade" [(ngModel)]="student.currentGrade" /></div>
+				</div>
+				<div class="ui-grid-row">
+					<div class="ui-grid-col-4"><label for="color">Status</label></div>
+					<div class="ui-grid-col-8"><input pInputText id="status" [(ngModel)]="student.status" /></div>
+				</div>
+			</div>
+			<footer>
+				<div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
+					<button type="button" pButton (click)="delete()" label="Delete"></button>
+					<button type="button" pButton (click)="save()" label="Save"></button>
+				</div>
+			</footer>
+		</p-dialog>
+
+	</p-fieldset>
 
 </div>
