Sprint 4 ready and filling view

--- a/app/accounts/accounts.component.html
+++ b/app/accounts/accounts.component.html
@@ -1,2 +1,19 @@
 <p-fieldset legend="Accounts">
+
+    <div class="ui-g">
+
+        <div class="ui-g-4">
+            <p-chart type="line" [data]="line"></p-chart>
+        </div>
+
+        <div class="ui-g-4">
+            <p-chart type="bar" [data]="bar"></p-chart>
+        </div>
+
+        <div class="ui-g-4">
+            <p-chart type="pie" [data]="pie"></p-chart>
+
+        </div>
+    </div>
+
 </p-fieldset>
