--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g">
 
 	<div class="ui-g-12">
-		<div id="banner">
+		<div id="banner" style="text-align:center;">
 			<img src="https://cdn.discordapp.com/attachments/190206021069701120/248949417971941376/unknown.png" style="width:auto; height:15%;">
 		</div>
 		<br>
