--- a/app/student/student-detail.component.html
+++ b/app/student/student-detail.component.html
@@ -45,6 +45,7 @@
 	<div>
 		<button type="button" (click)="goBack()" pButton label="Back"></button>
 		<button type="button" (click)="save()" pButton label="Save"></button>
+		<button type="button" (click)="delete()" pButton label="Delete"></button>
 	</div>
 
 </div>
