--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,43 @@ body {
   background-color: black;
 }
 
-#menubar {
-  background-color: darkred;
+label {
+  display: inline-block;
+  width: 7em;
+  margin: .5em 0;
+  color: #607D8B;
+  font-weight: bold;
+}
+input {
+  height: 2em;
+  width: 20em;
+  font-size: 1em;
+  padding-left: .4em;
+}
+button {
+  margin: 5px;
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+}
+
+.inline {
+  font-family: Arial;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer; cursor: hand;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
+button:disabled {
+  background-color: #eee;
+  color: #ccc; 
+  cursor: auto;
 }
