--- a/app/student/student-list.component.html
+++ b/app/student/student-list.component.html
@@ -65,10 +65,10 @@
 					<div class="ui-grid-col-4"><label for="description">Description</label></div>
 					<div class="ui-grid-col-8"><input pInputText id="description" [(ngModel)]="student.description" /></div>
 				</div>
-				<div class="ui-grid-row">
+				<!--<div class="ui-grid-row">
 					<div class="ui-grid-col-4"><label for="systemInfo">System Info</label></div>
 					<div class="ui-grid-col-8"><input pInputText id="systemInfo" [(ngModel)]="student.systemInfo" /></div>
-				</div>
+				</div>-->
 			</div>
 			<footer>
 				<div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
