--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,28 +1,21 @@
 <div class="ui-g">
 
+	<!-- Banner -->
 	<div class="ui-g-12">
 		<div id="banner" style="text-align:center;">
 			<img src="https://cdn.discordapp.com/attachments/190206021069701120/248949417971941376/unknown.png" style="width:auto; height:15%;">
 		</div>
-		<br>
-		<button class="btn btn-primary" data-uk-offcanvas="{target:'#my-id'}">Menu</button>
 	</div>
 
+	<!-- Body -->
 	<div class="ui-g-12">
-		<router-outlet></router-outlet>
+		<!--<login></login>-->
+		<main></main>
 	</div>
 
-	<div id="my-id" class="uk-offcanvas">
-		<div class="uk-offcanvas-bar">
-			<ul class="uk-nav uk-nav-offcanvas">
-				<li> <a routerLink="/home">Home</a> </li>
-				<li> <a routerLink="/attendence">Attendence</a> </li>
-				<li> <a routerLink="/student">Students</a> </li>
-				<li> <a routerLink="/instructor">Instructors</a> </li>
-				<li> <a routerLink="/lessons">Learning Plans</a> </li>
-				<li> <a routerLink="/accounts">Accounts</a> </li>
-			</ul>
-		</div>
+	<!-- Footer -->
+	<div class="ui-g-12">
+		<div>Made by: PandaPirates</div>
 	</div>
 
 </div>
